kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudflow-ingress
  namespace: cloudflow
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: cloudflow.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3002
